# swift-rust

./: .gitattributes  .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  LICENSE  PUBLISHING.md  README.md  biome.json  bunfig.toml  package.json  tsconfig.base.json  turbo.json
.changeset/: config.json  create-swift-rust-vercel-template.md  (+5 more)
crates/bundler/: Cargo.toml  README.md
crates/bundler/src/: lib.rs
crates/compiler/: Cargo.toml  README.md
crates/compiler/swc-plugin-swift-rust/: Cargo.toml  README.md
crates/compiler/swc-plugin-swift-rust/src/: lib.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: lib.rs
crates/errors/: Cargo.toml  README.md
crates/errors/src/: lib.rs
crates/font/: Cargo.toml  README.md
crates/font/src/: lib.rs
crates/image/: Cargo.toml  README.md
crates/image/src/: lib.rs
crates/pdf/: Cargo.toml  README.md
crates/pdf/src/: lib.rs
crates/runtime/: Cargo.toml  README.md
crates/runtime/src/: lib.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: lib.rs
crates/swift-rust/: Cargo.toml  README.md
crates/swift-rust-api/: Cargo.toml  README.md
crates/swift-rust-api/src/: lib.rs
crates/swift-rust-build/: Cargo.toml  README.md
crates/swift-rust-build-test/: Cargo.toml  README.md
crates/swift-rust-build-test/src/: lib.rs
crates/swift-rust-build/src/: lib.rs
crates/swift-rust-code-frame/: Cargo.toml  README.md
crates/swift-rust-code-frame/src/: lib.rs
crates/swift-rust-core/: Cargo.toml  README.md
crates/swift-rust-core/src/: lib.rs
crates/swift-rust-custom-transforms/: Cargo.toml  README.md
crates/swift-rust-custom-transforms/src/: lib.rs
crates/swift-rust-error-code-swc-plugin/: Cargo.toml  README.md
crates/swift-rust-error-code-swc-plugin/src/: lib.rs
crates/swift-rust-napi-bindings/: Cargo.toml  README.md
crates/swift-rust-napi-bindings/src/: lib.rs
crates/swift-rust-taskless/: Cargo.toml  README.md
crates/swift-rust-taskless/src/: lib.rs
crates/swift-rust/src/: lib.rs  main.rs
crates/telemetry/: Cargo.toml  README.md
crates/telemetry/src/: lib.rs
crates/video/: Cargo.toml
crates/video/src/: lib.rs
crates/wasm/: Cargo.toml  README.md
crates/wasm/src/: lib.rs
srspack/: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json
srspack/.changeset/: swift-rust-srspack-compress.md  swift-rust-srspack-phase2.md
srspack/bench/: README.md  cold-build.sh  generate-fixtures.mjs  incremental.sh  memory.sh  results.md
srspack/bench/fixtures/large/: package.json
srspack/bench/fixtures/large/app/: layout-0001.css  layout-0003.css  layout-0003.tsx  layout-0004.css  layout-0004.tsx  layout-0005.tsx  layout-0006.tsx  layout-0007.css  layout-0008.tsx  layout-0010.css  layout-0011.css  layout-0011.tsx  layout-0012.css  layout-0012.tsx  layout-0013.css  layout-0013.tsx  layout-0014.css  layout-0014.tsx  layout-0015.css  layout-0015.tsx  layout-0016.css  layout-0016.tsx  layout-0017.css  layout-0017.tsx  layout-0018.css  layout-0018.tsx  layout-0019.css  layout-0019.tsx  layout-0020.css  layout-0020.tsx  layout-0021.css  layout-0021.tsx  layout-0022.css  layout-0022.tsx  layout-0023.css  layout-0023.tsx  layout-0024.css  layout-0024.tsx  layout-0025.css  layout-0025.tsx  (+4767 more)
srspack/bench/fixtures/large/public/: style-0001.css  style-0004.css  style-0005.css  style-0006.css  style-0008.css  style-0010.css  style-0011.css  style-0012.css  style-0013.css  style-0014.css  style-0015.css  style-0016.css  style-0017.css  style-0018.css  style-0019.css  style-0020.css  style-0021.css  style-0022.css  style-0023.css  style-0024.css  style-0025.css  style-0026.css  style-0027.css  style-0028.css  style-0029.css  style-0030.css
srspack/bench/fixtures/medium/: package.json
srspack/bench/fixtures/medium/app/: layout-0002.css  layout-0002.tsx  layout-0005.css  layout-0006.css  layout-0007.tsx  layout-0008.css  layout-0009.css  layout-0009.tsx  layout-0010.tsx  page-0002.tsx  page-0004.tsx  page-0009.tsx  page-0015.tsx  page-0017.tsx  page-0021.tsx  page-0022.tsx  page-0024.tsx  page-0027.tsx  page-0032.tsx  page-0034.tsx  page-0036.tsx  page-0037.tsx  page-0041.tsx  page-0043.tsx  page-0044.tsx  page-0046.tsx  page-0050.tsx  page-0051.tsx  page-0052.tsx  page-0053.tsx  page-0054.tsx  page-0055.tsx  page-0056.tsx  page-0057.tsx  page-0058.tsx  page-0059.tsx  page-0060.tsx  page-0061.tsx  page-0062.tsx  page-0063.tsx  (+397 more)
srspack/bench/fixtures/medium/public/: style-0002.css  style-0003.css  style-0007.css  style-0009.css
srspack/bench/fixtures/small/: package.json  srspack.config.ts
srspack/bench/fixtures/small/app/: layout-0001.tsx  page-0001.tsx  page-0002.tsx  page-0003.tsx  page-0004.tsx  page-0005.tsx  page-0006.tsx  page-0007.tsx  page-0008.tsx  page-0009.tsx  page-0010.tsx  page-0011.tsx  page-0012.tsx  page-0013.tsx  page-0014.tsx  page-0015.tsx  page-0016.tsx  page-0017.tsx  page-0018.tsx  page-0019.tsx  page-0020.tsx  page-0021.tsx  page-0022.tsx  page-0023.tsx  page-0024.tsx  page-0025.tsx  page-0026.tsx  page-0027.tsx  page-0028.tsx  page-0029.tsx  page-0030.tsx  page-0031.tsx  page-0032.tsx  page-0033.tsx  page-0034.tsx  page-0035.tsx  page-0036.tsx  page-0037.tsx  page-0038.tsx  page-0039.tsx  (+9 more)
srspack/crates/srspack-cli/: Cargo.toml
srspack/crates/srspack-cli/src/: main.rs
srspack/crates/srspack-core/: Cargo.toml
srspack/crates/srspack-core/src/: cache.rs  compress.rs  graph.rs  lib.rs  loader.rs  options.rs  profile.rs  result.rs
srspack/crates/srspack-loader-css/: Cargo.toml
srspack/crates/srspack-loader-css/src/: lib.rs
srspack/crates/srspack-loader-tsx/: Cargo.toml
srspack/crates/srspack-loader-tsx/src/: lib.rs
srspack/docs/: architecture.md  config.md  loaders.md  migration.md  perf.md  why-srspack.md
srspack/examples/01-basic/: package.json
srspack/examples/01-basic/app/: global.css  layout.tsx  page.tsx
srspack/scripts/: bench.sh  build.sh  clippy.sh  fmt.sh  publish.sh
srspack/src/: adapter.ts  index.ts  native.d.ts  plugin.ts
(+419 files in other folders)
