[package]
name = "swift-rust-bundler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Asset bundler, file watcher, and JSX/Rust transform pipeline."

[dependencies]
swift-rust-errors = { path = "../errors" }
swift-rust-config = { path = "../config" }

tokio = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
blake3 = { workspace = true }
parking_lot = { workspace = true }
rayon = "1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mime_guess = { workspace = true }
percent-encoding = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = "3"
