[workspace]
resolver = "2"
members = ["swc-plugin-swift-rust"]

[workspace.package]
version = "0.1.0"
license = "MIT"
edition = "2021"
authors = ["Swift Rust Team"]

[workspace.dependencies]
swc_core = { version = "0.101", features = [
    "ecma_transforms",
    "ecma_parser",
    "ecma_codegen",
    "ecma_visit",
    "ecma_ast",
    "swc_plugin",
    "__common_plugin_transform",
    "__plugin_transform_host",
    "common",
] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"

[profile.release]
opt-level = 3
lto = "thin"
