[package]
name = "swift-rust-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Configuration loading and validation for Swift Rust projects."

[dependencies]
swift-rust-errors = { path = "../errors" }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
