[package]
name = "swift-rust-errors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Error types and codes for the Swift Rust framework."

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
