[package]
name = "swift-rust-font"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Font loading, subsetting, and the <Font> system."

[dependencies]
swift-rust-errors = { path = "../errors" }
swift-rust-config = { path = "../config" }

fontdb = { workspace = true }
ttf-parser = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
percent-encoding = { workspace = true }
url = { workspace = true }
blake3 = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
