[package]
name = "swift-rust-image"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Image optimization and the <Image> component."

[dependencies]
swift-rust-errors = { path = "../errors" }
swift-rust-config = { path = "../config" }

image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
mime_guess = { workspace = true }
percent-encoding = { workspace = true }
url = { workspace = true }
blake3 = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
