[package]
name = "swift-rust-code-frame"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Source code frame extraction for fast, beautiful error messages."

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
unicode-width = "0.2"
