[package]
name = "swift-rust-custom-transforms"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Custom SWC transforms that augment the standard TypeScript/JSX pipeline."

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
