[package]
name = "swift-rust-napi-bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Node-API bindings (napi-rs) for using the swift-rust runtime from Node.js hosts."

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2"
serde = { workspace = true }
serde_json = { workspace = true }
swift-rust-core = { path = "../swift-rust-core" }
thiserror = { workspace = true }
tracing = { workspace = true }
