[package]
name = "wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM bindings for the swift-rust runtime — used in ssr-wasm and full-wasm modes."

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
default = []
