[package]
name = "srspack-loader-css"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "CSS + CSS Modules loader for srspack."

[dependencies]
srspack-core = { path = "../srspack-core" }

async-trait = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
hex = "0.4"
serde_json = { workspace = true }
